--- a/package.json
+++ b/package.json
@@ -1,5 +1,15 @@
 {
-  "dependencies": {
-    "node-sass": "^9.0.0"
+  "name": "vite-project",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
+  "devDependencies": {
+    "sass": "^1.77.8",
+    "vite": "^5.3.4"
   }
 }
