--- a/package.json
+++ b/package.json
@@ -1,15 +1,21 @@
 {
-  "name": "vite-project",
+  "name": "package-todo-project-js",
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "main": "main.js",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
-    "sass": "^1.77.8",
     "vite": "^5.3.4"
+  },
+  "dependencies": {
+    "@vitejs/plugin-legacy": "^5.4.1",
+    "sass": "^1.77.8",
+    "terser": "^5.31.3",
+    "vite-plugin-minify": "^1.5.2"
   }
 }
