--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "package-todo-project-js",
-  "private": true,
+  "private": false,
   "version": "0.0.0",
   "type": "module",
   "main": "main.js",
