--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "package-todo-project-js",
   "private": false,
-  "version": "0.0.0",
+  "license": "MIT",
+  "version": "1.0.0",
   "type": "module",
   "main": "main.js",
   "scripts": {
