--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "version": "1.0.0",
   "type": "module",
-  "main": "main.js",
+  "main": "index.html",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
