--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "package-todo-project-js",
+  "name": "ToDo-Project-JS",
   "private": false,
   "license": "MIT",
   "version": "1.0.0",
